# ChangeLog for x11-libs/fox
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.52 2006/08/19 23:08:35 tcort Exp $

  19 Aug 2006; Thomas Cort <tcort@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on amd64 wrt Bug #138871.

  19 Aug 2006; Jason Wever <weeve@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on SPARC wrt bug #138871.

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on ppc.

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

  06 Jul 2006; Markus Rothe <corsair@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on ppc64

  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable x86; bug #138871

  25 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>; fox-1.0.53.ebuild,
  fox-1.2.6-r3.ebuild, fox-1.2.15.ebuild, fox-1.4.11.ebuild,
  fox-1.4.12.ebuild, fox-1.5.4.ebuild:
  (#119028) Add modular X deps.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> fox-1.2.6-r2.ebuild:
  stable on ia64

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> fox-1.2.6-r2.ebuild:
  Stable on ppc.

  01 Jun 2005; Mike Frysinger <vapier@gentoo.org> fox-1.2.15.ebuild,
  fox-1.4.11.ebuild, fox-1.4.12.ebuild, fox-1.5.4.ebuild:
  Change USE=bzlib to USE=bzip2.

  13 May 2005; Bryan Østergaard <kloeri@gentoo.org> fox-1.2.6-r2.ebuild:
  ~ia64 keyword.

*fox-1.2.15 (07 May 2005)

  07 May 2005; <rphillips@gentoo.org> +fox-1.0.53.ebuild, +fox-1.2.15.ebuild,
  +fox-1.4.12.ebuild, +fox-1.5.4.ebuild:
  Added Yaakov Selkowitz's eclass based fox ebuilds for testing.
  Fixes #88924

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> fox-1.4.11.ebuild:
  Added ~ppc64 to KEYWORDS

*fox-1.2.6-r3 (02 Apr 2005)

  02 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +fox-1.2.6-r3.ebuild, fox-1.4.11.ebuild:
  Updated to use econf and make DESTDIR="${D}" install
