@@ -3,11 +3,14 @@ DIST fox-1.0.43.tar.gz 2132787
 DIST fox-1.0.49.tar.gz 2133091 RMD160 7bfc8777b5fa1e08a4f6afe38759ee06cd442f3b SHA1 bb0648b5dd46084074ba517943a765f56ec3b31c SHA256 81ec97089f7a8d5fececb89c94370e2d7665ec0679e797da568968cd26eeaf60
 DIST fox-1.0.53.tar.gz 2120403
 DIST fox-1.2.15.tar.gz 3895260
+DIST fox-1.2.18.tar.gz 3896090 RMD160 8c36939541e28f68bfd332fe1e12891faa15daca SHA1 3e17a6fd31c5e1bba5357c237fcb950834c28c38 SHA256 77509ed17fb736b83f3073fc04986eed79ce70338f6c12596c966551e0d56a1b
 DIST fox-1.2.4.tar.gz 3770726
 DIST fox-1.2.6.tar.gz 3770911 RMD160 a9bc273f416937114fffcbfcbb7a534103bf1e60 SHA1 d8d13814e8128f44e7ca82d99a464ddbe5881d09 SHA256 ac0753937bef12f5fa286f45a100ddcb2b6cc12b108ca133a80b50c8fe6825bb
-DIST fox-1.4.11.tar.gz 3922733
-DIST fox-1.4.12.tar.gz 3922769
+DIST fox-1.4.11.tar.gz 3922733 RMD160 49b9d78b27a0cf81e5b5ed7cf1d5f2b3da3dc520 SHA1 fcb4b1039ff951ebb5f8d810df7a30699d50a812 SHA256 63d08f11a484e38ab3ec372f28e20109f3bd38884d7e059a43ca6bf772a1e92e
+DIST fox-1.4.12.tar.gz 3922769 RMD160 13aa9b6316281c4f643777c50ae7757183866e4c SHA1 a3307d74663311918be79bcd9e882556c53af99a SHA256 a83966681aff8fa204504abe0e4654f8405597998ab8dcbf37b425fd7f59eb12
+DIST fox-1.4.34.tar.gz 4028423 RMD160 35701bff6937f4753310b364dba1553109e661a4 SHA1 cd532233436082fda3bd077741236f118c71e1b8 SHA256 63acfd4815d3d71cdf2cbccf6e2fdf022192daec1674ab90cc294732948169ab
 DIST fox-1.5.4.tar.gz 4027866
+DIST fox-1.6.14.tar.gz 4331647 RMD160 fce9d3c19e7a91ba42302a9f1a3db7021573b9aa SHA1 c55b90dadfb01655ec63b33b08f748e1cfa8a615 SHA256 ce3185cef8d5a45a05b77854a80cc1e149c9971d1ca974372b52a3902ff87755
 EBUILD fox-1.0.40.ebuild 1146 RMD160 5b565a5c8647207e60f3e5ede7902ba010e70734 SHA1 dc2c6a22de7cab22bc5c1a6bbd363fe3dfd4282b SHA256 3972cd8f355b1d65156aafe271055143dd3944ad931a8f8b1e8d03ca969cb63a
 MD5 a5f1167fb465b82c2c240f208d924c3d fox-1.0.40.ebuild 1146
 RMD160 5b565a5c8647207e60f3e5ede7902ba010e70734 fox-1.0.40.ebuild 1146
@@ -28,6 +31,10 @@ EBUILD fox-1.2.15.ebuild 1088 RMD160 e8008d763d8a5ac6453ad3697fae849cb4df4fe8 SH
 MD5 6b65d6079cc421e60c61943ba1fb473c fox-1.2.15.ebuild 1088
 RMD160 e8008d763d8a5ac6453ad3697fae849cb4df4fe8 fox-1.2.15.ebuild 1088
 SHA256 2fcf64757e2fa690012864df2e1b75737f53648d37be78370a2237c2ca829e0b fox-1.2.15.ebuild 1088
+EBUILD fox-1.2.18.ebuild 1234 RMD160 33e8e490d3d626613e8f23d208aa3b9993e0b193 SHA1 0a17a65a5a475ea3fd0040e79a1a793f84b2ab65 SHA256 b38bdabd42107f21328af09aeed433126781edd99a2cace2d4b734096118068f
+MD5 4ca7028056ad07b94b87b828d87d5ac9 fox-1.2.18.ebuild 1234
+RMD160 33e8e490d3d626613e8f23d208aa3b9993e0b193 fox-1.2.18.ebuild 1234
+SHA256 b38bdabd42107f21328af09aeed433126781edd99a2cace2d4b734096118068f fox-1.2.18.ebuild 1234
 EBUILD fox-1.2.4.ebuild 1207 RMD160 2df428f5b8e146e64dc233e0ddb2b57494e22b92 SHA1 3eb7385d1cc5ad81cdae51c3ab48b1f25ba2ddbd SHA256 76e40153365974c88c69b342dd473c91af94ad129f8237f139f63c87685322f5
 MD5 f793254a74b6b00db3cc044bae1f2f62 fox-1.2.4.ebuild 1207
 RMD160 2df428f5b8e146e64dc233e0ddb2b57494e22b92 fox-1.2.4.ebuild 1207
@@ -48,14 +55,22 @@ EBUILD fox-1.4.12.ebuild 1088 RMD160 8e5cfa2acb19caf988d555afd51fd2925185784b SH
 MD5 6cd01de7cf9dfaa51d495c806b4eda95 fox-1.4.12.ebuild 1088
 RMD160 8e5cfa2acb19caf988d555afd51fd2925185784b fox-1.4.12.ebuild 1088
 SHA256 f886256bd3faa7cbeaeeb86390bf941ad8ab980b392237e95947fd65f91bfda8 fox-1.4.12.ebuild 1088
+EBUILD fox-1.4.34.ebuild 1088 RMD160 7a8a32d010150d3c97e942d184f5497e3f6eb55e SHA1 b7f130e652cc10399ba88426a81c9c4e25a0c68d SHA256 89bd2ff9dc6185b1386e72adb26712db65485dd6f805af5576c23c9c5fb6e2fa
+MD5 e2aa8599d4d062632847545c1cd0e0e4 fox-1.4.34.ebuild 1088
+RMD160 7a8a32d010150d3c97e942d184f5497e3f6eb55e fox-1.4.34.ebuild 1088
+SHA256 89bd2ff9dc6185b1386e72adb26712db65485dd6f805af5576c23c9c5fb6e2fa fox-1.4.34.ebuild 1088
 EBUILD fox-1.5.4.ebuild 1087 RMD160 6a551cb953c20ad121cd74fd25911420f3643592 SHA1 07ad203fe20634699827c74b07c90ec74280890a SHA256 a4cf11aa2b8d8cf8b0f08ddbb463d6639c10f635c3061fef219336aebad980d1
 MD5 a3588578cfc68033e0493a18e27f598f fox-1.5.4.ebuild 1087
 RMD160 6a551cb953c20ad121cd74fd25911420f3643592 fox-1.5.4.ebuild 1087
 SHA256 a4cf11aa2b8d8cf8b0f08ddbb463d6639c10f635c3061fef219336aebad980d1 fox-1.5.4.ebuild 1087
-MISC ChangeLog 6039 RMD160 ef1b3915ef7df36df04eac244464fb26c7bb78aa SHA1 d2f84de220de0700cc51da8c2eb4b91580a69d96 SHA256 7743be3f182ad53b40394f16409807f967fade1fd30decb502d2b5ac6b26d3a2
-MD5 aac17c493edfc82f120a98a85c4ee06e ChangeLog 6039
-RMD160 ef1b3915ef7df36df04eac244464fb26c7bb78aa ChangeLog 6039
-SHA256 7743be3f182ad53b40394f16409807f967fade1fd30decb502d2b5ac6b26d3a2 ChangeLog 6039
+EBUILD fox-1.6.14.ebuild 1088 RMD160 f799b5c9f52512a1bb87d7890bb3f9c5348a72b4 SHA1 2944ffdd8ae533fd151ec80fd65e9a5c3a21f96c SHA256 317a10441878a5787b0e4d43b11a0e7b9d1df5b5561877ea8c2985c950c56096
+MD5 030843b920b4aabe3a4e99636ea23b2d fox-1.6.14.ebuild 1088
+RMD160 f799b5c9f52512a1bb87d7890bb3f9c5348a72b4 fox-1.6.14.ebuild 1088
+SHA256 317a10441878a5787b0e4d43b11a0e7b9d1df5b5561877ea8c2985c950c56096 fox-1.6.14.ebuild 1088
+MISC ChangeLog 6389 RMD160 a4e96325b3fd35bf7edf14b5be4c3c4bb1da16de SHA1 5862761257d66f3228a78410f43cabcbc2606a9f SHA256 6eb43178fde119da579a2564d86e7a899cceedb90e3b44a08ced3bee1b170728
+MD5 1e0f50b57859896d22f9e5ac95a13a96 ChangeLog 6389
+RMD160 a4e96325b3fd35bf7edf14b5be4c3c4bb1da16de ChangeLog 6389
+SHA256 6eb43178fde119da579a2564d86e7a899cceedb90e3b44a08ced3bee1b170728 ChangeLog 6389
 MISC metadata.xml 160 RMD160 d86217bb48cf4283e08e43bcaabbc919101ad795 SHA1 d6147d00f16e8cfeef893d0764b0675a93d62849 SHA256 56fca1e06f6dcbe3bc12e7d3962998c7cb79d74f218ce8a17b07771b3e06f49e
 MD5 dffd46174e78b327c834fc3e4b1cf848 metadata.xml 160
 RMD160 d86217bb48cf4283e08e43bcaabbc919101ad795 metadata.xml 160
@@ -75,6 +90,9 @@ SHA256 e4aba14ffaec510bf9fc95c58632d4eb4fb820b172e020f17e7ce47926e3e4cf files/di
 MD5 d54a926d81530863bfe613992128d46d files/digest-fox-1.2.15 63
 RMD160 15f4137124e537d358d643c10292da0092f5a7b5 files/digest-fox-1.2.15 63
 SHA256 9a4073e04a3a1f037f0695128669e5f7a38135ce86732dac75cf85e800db7d0c files/digest-fox-1.2.15 63
+MD5 b687d951937feadfb475fbcdb5601efd files/digest-fox-1.2.18 235
+RMD160 6e13fece964841658a7a50bcd81b38d93687a804 files/digest-fox-1.2.18 235
+SHA256 3b4216c0355d0e62f88e735fd1fc97377e08138f9afc602ab9a27173156632f7 files/digest-fox-1.2.18 235
 MD5 dfa6f7b6f4106903b051128fd8838422 files/digest-fox-1.2.4 62
 RMD160 a0f0d17dd1a9520fa0cc82d6b3826a5f119af65a files/digest-fox-1.2.4 62
 SHA256 c1455d665629fea5ea54e47b5a625785cc1d020165dc441d5bd567dee7fb16ab files/digest-fox-1.2.4 62
@@ -84,12 +102,18 @@ SHA256 60c4b75d83b4a7144cb88399d045f2070bfb81e0c46371a80f406236e477aadd files/di
 MD5 651516d478ab8b234e3b3586bab024c8 files/digest-fox-1.2.6-r3 232
 RMD160 484978049627344041273c99195f220b7a2c0a3e files/digest-fox-1.2.6-r3 232
 SHA256 60c4b75d83b4a7144cb88399d045f2070bfb81e0c46371a80f406236e477aadd files/digest-fox-1.2.6-r3 232
-MD5 f9d9e432dde17dda3e7caeb01768d25f files/digest-fox-1.4.11 63
-RMD160 e8f9f6b62323112d1dbe1abf4d630188341987e6 files/digest-fox-1.4.11 63
-SHA256 6aa00fced562bc24a78f88643c58024a80fc8a233ddbf6e95143d472a6c89e45 files/digest-fox-1.4.11 63
-MD5 8facf84e5d62d38f0aee44efd517f615 files/digest-fox-1.4.12 63
-RMD160 576992085d709d781f8f2a42191df99a431f3233 files/digest-fox-1.4.12 63
-SHA256 48151e5f289e0a85740bb22659517574a28b19694d22d9a1eed271a7b14a54e1 files/digest-fox-1.4.12 63
+MD5 1aee31fa0724ac16e3bc76ecbfc3dc0d files/digest-fox-1.4.11 235
+RMD160 0df7e0ed1af32d978a218d52669bb78875d57c3e files/digest-fox-1.4.11 235
+SHA256 83d33115cb4af80a676e3c400fa5ca44ad2f4cb03eec017c79ad4c3f9f9243e8 files/digest-fox-1.4.11 235
+MD5 85dfbb985681c6a668e38076bdd9522c files/digest-fox-1.4.12 235
+RMD160 8e45962e70b610b801ea0ceeb0800726deecfda7 files/digest-fox-1.4.12 235
+SHA256 3af0f083099df2fb288f91d76db451fd50240b5dbacdd0dbfeed9e57e57d2714 files/digest-fox-1.4.12 235
+MD5 bd7d93aa708271eb2b068e0a0d638e68 files/digest-fox-1.4.34 235
+RMD160 394190de6f2b06a8ee0fe1ca9a19536ec4e092ae files/digest-fox-1.4.34 235
+SHA256 c381c622da72d81670c95ce0730cf25c89065d82cb0076afb867f820c7723a5d files/digest-fox-1.4.34 235
 MD5 ef6bd59b06837347451172daa73db79f files/digest-fox-1.5.4 62
 RMD160 ed73a08e6db90aff380d832fff74cad69949e540 files/digest-fox-1.5.4 62
 SHA256 64b39e549ac3775283cb0139cf5347f2c14fbdfd9e36a6eb518125b703a3f7d1 files/digest-fox-1.5.4 62
+MD5 27f970c6af499cc7e0413a364d697178 files/digest-fox-1.6.14 235
+RMD160 4d6af2ee359bf6b4142f1c7b78c0981a4a29f07c files/digest-fox-1.6.14 235
+SHA256 45e404a25a29b29cc03f9099805840b47301c0f5a4d79a40aa9610c0cb440684 files/digest-fox-1.6.14 235
