@@ -1,0 +1,3 @@
+MD5 f55e53d66cfe09c0392cb837ec9ae8a6 fox-1.2.18.tar.gz 3896090
+RMD160 8c36939541e28f68bfd332fe1e12891faa15daca fox-1.2.18.tar.gz 3896090
+SHA256 77509ed17fb736b83f3073fc04986eed79ce70338f6c12596c966551e0d56a1b fox-1.2.18.tar.gz 3896090
