@@ -1,1 +1,3 @@
 MD5 77111b1be532efe5ccd04260cc0e1a29 fox-1.4.11.tar.gz 3922733
+RMD160 49b9d78b27a0cf81e5b5ed7cf1d5f2b3da3dc520 fox-1.4.11.tar.gz 3922733
+SHA256 63d08f11a484e38ab3ec372f28e20109f3bd38884d7e059a43ca6bf772a1e92e fox-1.4.11.tar.gz 3922733
