@@ -1,1 +1,3 @@
 MD5 ecacdaf32d3a9da862de3fbf6788b65c fox-1.4.12.tar.gz 3922769
+RMD160 13aa9b6316281c4f643777c50ae7757183866e4c fox-1.4.12.tar.gz 3922769
+SHA256 a83966681aff8fa204504abe0e4654f8405597998ab8dcbf37b425fd7f59eb12 fox-1.4.12.tar.gz 3922769
