@@ -1,0 +1,3 @@
+MD5 3424b9d3f9b71e1f53e9c3822de3b76c fox-1.4.34.tar.gz 4028423
+RMD160 35701bff6937f4753310b364dba1553109e661a4 fox-1.4.34.tar.gz 4028423
+SHA256 63acfd4815d3d71cdf2cbccf6e2fdf022192daec1674ab90cc294732948169ab fox-1.4.34.tar.gz 4028423
