@@ -1,0 +1,3 @@
+MD5 89d06dc6a732f25ee766bb7a6a985d62 fox-1.6.14.tar.gz 4331647
+RMD160 fce9d3c19e7a91ba42302a9f1a3db7021573b9aa fox-1.6.14.tar.gz 4331647
+SHA256 ce3185cef8d5a45a05b77854a80cc1e149c9971d1ca974372b52a3902ff87755 fox-1.6.14.tar.gz 4331647
