@@ -1,6 +1,15 @@
 # ChangeLog for x11-libs/fox
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.52 2006/08/19 23:08:35 tcort Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.53 2006/08/23 00:16:45 dberkholz Exp $
+
+*fox-1.6.14 (23 Aug 2006)
+*fox-1.4.34 (23 Aug 2006)
+*fox-1.2.18 (23 Aug 2006)
+
+  23 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fox-1.2.18.ebuild,
+  +fox-1.4.34.ebuild, +fox-1.6.14.ebuild:
+  (#128917) Bump to latest versions, so everything works with gcc-4. For 1.2
+  series, the ebuild also needs -ffriend-injection (Martin von Gagern).
 
   19 Aug 2006; Thomas Cort <tcort@gentoo.org> fox-1.2.6-r3.ebuild:
   Stable on amd64 wrt Bug #138871.
